--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "pacwrap"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [dependencies]
@@ -16,6 +16,7 @@ serde_yaml = "0.9"
 typetag="0.2"
 os_pipe = "1.1.4"
 signal-hook = "0.3.15"
+lazy_static = "1.4.0"
 
 [profile.release]
 lto = "thin"
