--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,14 @@
 
 [package]
 name = "pacwrap"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 command-fds = "0.2.2"
 #tempfile = "3"
 serde_json = "1.0"
-envy = "0.4"
+#envy = "0.4"
 nix = "0.26.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
@@ -17,6 +17,14 @@ typetag="0.2"
 os_pipe = "1.1.4"
 signal-hook = "0.3.15"
 lazy_static = "1.4.0"
+alpm = { version = "2.2.2", features = ["checkver"] }
+indicatif = "0.17.5"
+console = "0.15.7"
+dialoguer = "0.10.4"
+pacmanconf = "2.0.0"
+ciborium = "0.2.1"
+walkdir = "2.3.3"
+indexmap = { version = "2.0.0", features = ["serde"] }
 
 [profile.release]
 lto = "thin"
