--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "pacwrap"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
 
 [dependencies]
@@ -12,7 +12,7 @@ serde_json = "1.0"
 #envy = "0.4"
 rayon = "1.7.0"
 nix = "0.22.3, <= 0.22.3"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0.9"
 typetag="0.2"
 os_pipe = "1.1.4"
