--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "pacwrap"
-version = "0.2.8"
+version = "0.2.9"
 edition = "2021"
 
 [dependencies]
@@ -26,6 +26,8 @@ pacmanconf = "2.0.0"
 ciborium = "0.2.1"
 walkdir = "2.3.3"
 indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
+time = { version = "0.3.28", features = ["formatting", "macros", "local-offset", "parsing"] }
+bitflags = "2.4.0"
 
 [profile.release]
 lto = "thin"
