--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 alpm = { version = "2.2.2", features = ["checkver"] }
-pacwrap-lib = { path = "../pacwrap-lib/", version = "0.4.4" }
+pacwrap-core = { path = "../pacwrap-core/", version = "0.5.0" }
 serde = { version = "1.0", features = ["derive"] }
 ciborium = "0.2.1"
