--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,8 +1,8 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package]
-name = "pacwrap-lib"
-version = "0.4.4"
+name = "pacwrap-core"
+version = "0.5.0"
 edition = "2021"
 
 [dependencies]
