--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -1,12 +1,21 @@
 [package]
 name = "pacwrap-agent"
-version = "0.1.0"
+version = "0.5.0"
+authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
+license ="GPL-3.0-only"
+readme = "README.md"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Executable agent for conducting containerized transactions"
+homepage = "https://pacwrap.sapphirus.org/"
+repository = "https://git.sapphirus.org/pacwrap/pacwrap"
 
 [dependencies]
-alpm = { version = "2.2.2", features = ["checkver"] }
-pacwrap-core = { path = "../pacwrap-core/", version = "0.5.0" }
+pacwrap-core = { path = "../pacwrap-core", version = "0.5.0" }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
-ciborium = "0.2.1"
+bincode = "1.3.3"
+
+# Packaging
+alpm = { version = "2.2.2", features = ["checkver"] }
