--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,31 +1,38 @@
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [package]
 name = "pacwrap-core"
 version = "0.5.0"
+authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
+license ="GPL-3.0-only"
+readme = "README.md"
 edition = "2021"
 
+description = "Core library providing core functionality for pacwrap"
+homepage = "https://pacwrap.sapphirus.org/"
+repository = "https://git.sapphirus.org/pacwrap/pacwrap"
+
 [dependencies]
-command-fds = "0.2.2"
-#tempfile = "3"
-serde_json = "1.0"
-#envy = "0.4"
-rayon = "1.7.0"
+bitflags = "2.4.0"
+lazy_static = "1.4.0"
 nix = "0.22.3, <= 0.22.3"
+time = { version = "0.3.28", features = ["formatting", "macros", "local-offset", "parsing"] }
+simplebyteunit = "0.2.1"
+walkdir = "2.3.3"
+
+# Serialization
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0.9"
 typetag="0.2"
-os_pipe = "1.1.4"
-signal-hook = "0.3.15"
-lazy_static = "1.4.0"
-alpm = { version = "2.2.2", features = ["checkver"] }
-indicatif = "0.17.5"
-dialoguer = "0.10.4"
-pacmanconf = "2.0.0"
-ciborium = "0.2.1"
-walkdir = "2.3.3"
-indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
-time = { version = "0.3.28", features = ["formatting", "macros", "local-offset", "parsing"] }
-bitflags = "2.4.0"
-simplebyteunit = "0.2.1"
 dyn-clone = "1.0.14"
+indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
+bincode = "1.3.3"
+
+# Packaging
+alpm = { version = "2.2.2", features = ["checkver"] }
+pacmanconf = "2.0.0"
+
+# Threading
+rayon = "1.7.0"
+
+# CLI libraries
+dialoguer = "0.10.4"
+indicatif = "0.17.5"
