--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pacwrap-core"
-version = "0.5.3"
+version = "0.6.0"
 authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
@@ -15,6 +15,7 @@ bitflags = "2.4.0"
 lazy_static = "1.4.0"
 nix = "0.22.3, <= 0.22.3"
 time = { version = "0.3.28", features = ["formatting", "macros", "local-offset", "parsing"] }
+indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
 simplebyteunit = "0.2.1"
 walkdir = "2.3.3"
 
@@ -23,8 +24,12 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0.9"
 typetag="0.2"
 dyn-clone = "1.0.14"
-indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
 bincode = "1.3.3"
+
+#Container runtime
+command-fds = "0.2.2"
+os_pipe = "1.1.4"
+libseccomp = "0.3.0"
 
 # Packaging
 alpm = { version = "2.2.2", features = ["checkver"] }
