--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pacwrap-agent"
-version = "0.6.4"
+version = "0.7.0"
 authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
@@ -8,10 +8,10 @@ edition = "2021"
 
 description = "Executable agent for conducting containerized transactions"
 homepage = "https://pacwrap.sapphirus.org/"
-repository = "https://git.sapphirus.org/pacwrap/pacwrap"
+repository = "https://github.com/pacwrap/pacwrap"
 
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core", version = "0.6.4" }
+pacwrap-core = { path = "../pacwrap-core", version = "0.7.0" }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
