--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pacwrap-core"
-version = "0.6.4"
+version = "0.7.0"
 authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
@@ -8,7 +8,7 @@ edition = "2021"
 
 description = "Core library providing core functionality for pacwrap"
 homepage = "https://pacwrap.sapphirus.org/"
-repository = "https://git.sapphirus.org/pacwrap/pacwrap"
+repository = "https://github.com/pacwrap/pacwrap"
 
 [dependencies]
 bitflags = "2.4.0"
@@ -30,10 +30,13 @@ bincode = "1.3.3"
 command-fds = "0.2.2"
 os_pipe = "1.1.4"
 libseccomp = "0.3.0"
+signal-hook = "0.3.15"
 
 # Packaging
 alpm = { version = "2.2.2", features = ["checkver"] }
 pacmanconf = "2.0.0"
+tar = "0.4"
+zstd = "0.13.0"
 
 # Threading
 rayon = "1.7.0"
