--- a/pacwrap/Cargo.toml
+++ b/pacwrap/Cargo.toml
@@ -16,6 +16,7 @@ pacwrap-core = { path = "../pacwrap-core/", version = "0.7.2" }
 indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
 nix = "0.22.3, <= 0.22.3"
 lazy_static = "1.4.0"
+simplebyteunit = "0.2.1"
 
 # Container runtime
 command-fds = "0.2.2"
@@ -24,6 +25,8 @@ os_pipe = "1.1.4"
 
 # Packaging
 alpm = { version = "2.2.2", features = ["checkver"] }
+sha2 = "0.10.8"
+regex = "1.10.3"
 
 [build-dependencies]
 pacwrap-core = { path = "../pacwrap-core/", version = "0.7.2" }
