--- a/pacwrap/Cargo.toml
+++ b/pacwrap/Cargo.toml
@@ -24,7 +24,9 @@ signal-hook = "0.3.15"
 os_pipe = "1.1.4"
 
 # Packaging
-alpm = { version = "2.2.2", features = ["checkver"] }
+alpm = { version = "3.0.5", features = ["checkver"] }
+
+# Miscellaneous
 sha2 = "0.10.8"
 regex = "1.10.3"
 
