--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -21,7 +21,7 @@ walkdir = "2.3.3"
 
 # Serialization
 serde = { version = "1.0", features = ["derive", "rc"] }
-serde_yaml = "0.9"
+serde_yaml = "0.9.33, <= 0.9.33"
 typetag="0.2"
 dyn-clone = "1.0.14"
 bincode = "1.3.3"
