--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pacwrap-core"
-version = "0.8.0"
-authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
+version = "0.8.1"
+authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
 edition = "2021"
