--- a/pacwrap/Cargo.toml
+++ b/pacwrap/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pacwrap"
-version = "0.8.0"
-authors = [ "Xavier R.M. <sapphirus@azorium.net>" ]
+version = "0.8.1"
+authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
 edition = "2021"
@@ -13,7 +13,7 @@ homepage = "https://pacwrap.sapphirus.org/"
 repository = "https://github.com/pacwrap/pacwrap"
 
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core/", version = "0.8.0" }
+pacwrap-core = { path = "../pacwrap-core/", version = "0.8.1" }
 indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
 nix = "0.22.3, <= 0.22.3"
 lazy_static = "1.4.0"
@@ -32,4 +32,4 @@ sha2 = "0.10.8"
 regex = "1.10.3"
 
 [build-dependencies]
-pacwrap-core = { path = "../pacwrap-core/", version = "0.8.0" }
+pacwrap-core = { path = "../pacwrap-core/", version = "0.8.1" }
