--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
 name = "pacwrap-agent"
-version = "0.8.2"
+version = "0.8.3"
 authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
 edition = "2021"
 rust-version = "1.72"
 
-description = "Executable agent for conducting containerized transactions"
 homepage = "https://pacwrap.sapphirus.org/"
 repository = "https://github.com/pacwrap/pacwrap"
 
+description = "Executable agent for conducting containerized transactions"
+keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
+categories = [ "command-line-utilites", "virtualization", "filesystem", "concurrency", "caching" ]
+
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core", version = "0.8.2" }
+pacwrap-core = { path = "../pacwrap-core", version = "0.8.3" }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
