--- a/pacwrap-core/Cargo.toml
+++ b/pacwrap-core/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "pacwrap-core"
-version = "0.8.2"
+version = "0.8.3"
 authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
 edition = "2021"
 rust-version = "1.72"
 
-description = "Library providing core functionality for pacwrap"
 homepage = "https://pacwrap.sapphirus.org/"
 repository = "https://github.com/pacwrap/pacwrap"
+
+description = "Library providing core functionality for pacwrap"
+keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
+categories = [ "command-line-utilites", "virtualization", "filesystem", "concurrency", "caching" ]
 
 [dependencies]
 bitflags = "2.4.2"
