--- a/pacwrap/Cargo.toml
+++ b/pacwrap/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pacwrap"
-version = "0.8.2"
+version = "0.8.3"
 authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
 license ="GPL-3.0-only"
 readme = "README.md"
@@ -8,12 +8,15 @@ edition = "2021"
 rust-version="1.72"
 default-run = "pacwrap"
 
-description = "Facilitates the creation, management, and execution of unprivileged Arch-based bubblewrap containers."
 homepage = "https://pacwrap.sapphirus.org/"
 repository = "https://github.com/pacwrap/pacwrap"
 
+description = "Facilitates the creation, management, and execution of unprivileged Arch-based bubblewrap containers."
+keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
+categories = [ "command-line-utilites", "virtualization", "filesystem", "concurrency", "caching" ]
+
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core/", version = "0.8.2" }
+pacwrap-core = { path = "../pacwrap-core/", version = "0.8.3" }
 indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
 nix = "0.22.3, <= 0.22.3"
 simplebyteunit = "0.2.1"
@@ -31,4 +34,4 @@ sha2 = "0.10.8"
 regex = "1.10.3"
 
 [build-dependencies]
-pacwrap-core = { path = "../pacwrap-core/", version = "0.8.2" }
+pacwrap-core = { path = "../pacwrap-core/", version = "0.8.3" }
