--- a/pacwrap/Cargo.toml
+++ b/pacwrap/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/pacwrap/pacwrap"
 
 description = "Facilitates the creation, management, and execution of unprivileged Arch-based bubblewrap containers."
 keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
-categories = [ "command-line-utilites", "virtualization", "filesystem", "concurrency", "caching" ]
+categories = [ "command-line-utilities", "virtualization", "filesystem", "concurrency", "caching" ]
 
 [dependencies]
 pacwrap-core = { path = "../pacwrap-core/", version = "0.8.3" }
