--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -1,8 +1,7 @@
-name: Cargo build (Arch Linux)
+name: Build
 
 on:
   push:
-  pull_request:
 
 env: 
   CARGO_TERM_COLOR: always
@@ -11,7 +10,7 @@ env:
 
 jobs:
   checkfmt:
-    name: Check Formatting
+    name: Check format
     runs-on: docker
     container:
       image: archlinux
@@ -26,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install toolchain
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} 
-      - name: Check formatting
+      - name: Check format
         run: cargo fmt --check
   build:
     name: Build pacwrap
@@ -46,3 +45,5 @@ jobs:
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - name: Build pacwrap
         run: ./dist/tools/prepare.sh release && cargo build --release && ./dist/tools/package.sh release
+      - name: Lint pacwrap
+        run: cargo clippy --release -- -Dwarnings
