--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build
 
 on:
   push:
+    branches:
+      - master
 
 env: 
   CARGO_TERM_COLOR: always
@@ -43,6 +45,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install toolchain
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - name: Set up environment
+        run: git config --global --add safe.directory '*'
       - name: Build pacwrap
         run: ./dist/tools/prepare.sh release && cargo build --release && ./dist/tools/package.sh release
       - name: Lint pacwrap
