--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
   pull_request:
     types:
       - opened
-    branches: 
+      - ready_for_review
+      - synchronize
+    branches:
       - master
 
 env: 
