--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
 name = "pacwrap-agent"
-version = "0.8.6"
-authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
-license ="GPL-3.0-only"
-readme = "README.md"
-edition = "2021"
-rust-version = "1.72"
-
-homepage = "https://pacwrap.sapphirus.org/"
-repository = "https://github.com/pacwrap/pacwrap"
-
 description = "Executable agent for conducting containerized transactions"
-keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
-categories = [ "command-line-utilities", "virtualization", "filesystem", "concurrency", "caching" ]
+
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+readme.workspace = true
+
+license.workspace = true
+authors.workspace = true
+keywords.workspace = true
+categories.workspace = true
+
+homepage.workspace = true
+repository.workspace = true
 
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core", version = "0.8.4" }
+pacwrap-core = { path = "../pacwrap-core" }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
