--- a/pacwrap-agent/Cargo.toml
+++ b/pacwrap-agent/Cargo.toml
@@ -16,11 +16,12 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-pacwrap-core = { path = "../pacwrap-core" }
-
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 
-# Packaging
-alpm = { version = "4.0.1", features = ["checkver"] }
+[dependencies.alpm]
+workspace = true
+
+[dependencies.pacwrap-core]
+workspace = true
