--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = ["pacwrap", "pacwrap-agent", "pacwrap-core"]
 
 [workspace.package]
-version = "0.8.7-pre"
+version = "0.8.7"
 edition = "2021"
 rust-version = "1.72"
 readme = "README.md"
@@ -17,7 +17,7 @@ homepage = "https://pacwrap.sapphirus.org/"
 repository = "https://github.com/pacwrap/pacwrap"
 
 [workspace.dependencies]
-pacwrap-core = { version = "0.8.7-pre", path = "pacwrap-core" }
+pacwrap-core = { version = "0.8.7", path = "pacwrap-core" }
 alpm = { version = "4.0.1", features = ["checkver"] }
 
 [profile.release]
